# push_notifications_service

./: Cargo.toml  build.rs
proto/: pushnotifications.proto
src/: main.rs  pushnotificationsservice.rs
